@@ -1,0 +1,2 @@
+version=4
+https://github.com/jupyter/jupyter_core/tags .*/archive/(.*)\.tar\.gz
