@@ -1,0 +1,1 @@
+Update pattern for GitHub URL in watch file to cope with addition of full ref name.
